WebKitMutationObserver.observe should raise a DOMException if passed invalid arguments https://bugs.webkit.org/show_bug.cgi?id=71596

Reviewed by Ryosuke Niwa.

Source/WebCore:

Adds two cases where WebKitMutationObserver.observe throws an exception:
  - When passed a null Node*.
  - When passed options that don't make sense, e.g.,
    'attributeOldValue' but not 'attributes'.

* bindings/js/JSWebKitMutationObserverCustom.cpp:
(WebCore::JSWebKitMutationObserver::observe):
* bindings/v8/custom/V8WebKitMutationObserverCustom.cpp:
(WebCore::V8WebKitMutationObserver::observeCallback):
* dom/WebKitMutationObserver.cpp:
(WebCore::WebKitMutationObserver::validateOptions):
(WebCore::WebKitMutationObserver::observe):
* dom/WebKitMutationObserver.h:
* dom/WebKitMutationObserver.idl:

LayoutTests:

* fast/mutation/observe-exceptions-expected.txt:
* fast/mutation/observe-exceptions.html:


Canonical link: https://commits.webkit.org/88178@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99611 268f45cc-cd09-0410-ab3c-d52691b4dbfc